# lineagentic-kg

./: .gitignore  MAkefile  Makefile  README.md  docker-compose.yml  execute_working_commands.sh  pyproject.toml  start_api_server.py  test_corpuser_corpgroup.py  test_dataset_relationships.py  test_relationships.py
dbconnector_layer/: __init__.py
docs/: diagrams_viewer.html  generate_diagrams.sh
docs/diagrams/: 01_bootstrap_phase.mmd  02_runtime_phase.mmd  03_config_loading.mmd  04_method_generation.mmd  05_system_architecture.mmd  06_data_flow.mmd
examples/: analyze_analyze_client_example_java.py  analyze_api_client_example_python.py  analyze_api_client_example_spark.py  analyze_api_client_example_sql.py  api_calls_examples.sh  cli_calls_examples.sh
generated_api/: README.md  delete_routes.py  factory_wrapper.py  get_routes.py  main.py  models.py  requirements.txt  upsert_routes.py
generated_api/config/: aspects.yaml  entities.yaml  relationships.yaml
images/: mermaid_model.mmd
lineagentic_catalog/api_generator/: generator.py
lineagentic_catalog/config/: aspects.yaml  entities.yaml  relationships.yaml  urn_patterns.yaml
lineagentic_catalog/registry/: generators.py  writers.py
lineagentic_kg/config/: relationships.yaml
lineagentic_kg/registry/: writers.py
models/: models.py
old_version/: .env  __init__.py  requirements.txt
old_version/dbconnector_layer/: database_factory.py
old_version/examples/: analyze_api_client_example_airflow.py  field_lineage_api_example.py
old_version/repository_layer/: __init__.py  constraints_startup.py  neo4j_ingestion_dao.py
old_version/repository_layer/cypher_examples/: basic_field_lineage.txt
old_version/restapi_layer/: api_server.py
old_version/service_layer/: __init__.py  lineage_service.py
old_version/utils/: __init__.py
refactoring/: INDIVIDUAL_ASPECTS_README.md  README_DYNAMIC_LINEAGE.md  README_EXPLANATIONS.md  README_INGESTION.md  README_REGISTRY_LINEAGE.md  README_SIMPLIFIED_LINEAGE.md  api_aspect_corpuserinfo.json  api_aspect_datajob.json  api_aspect_datasetprofile.json  api_aspect_datasetproperties.json  api_aspect_ownership.json  api_aspect_schemametadata.json  api_entity_dataset.json  api_relationship_ownership.json  enhanced_neo4j_ingestion.py  enhanced_registry.yaml  example_records.json  generate_api.py  generate_cli.py  ingest_api_files.py  ingest_individual_aspects.py  ingestion.py  readme.md  registry_factory.py  run_ingestion.py  test.py  test.sh  test_api_files.py  test_dynamic_lineage.py  test_individual_aspects.py  test_registry_lineage.py  test_updated_ingestion.py  test_utility_functions.py
refactoring/api_generator/: __init__.py  generator.py
refactoring/cli_generator/: __init__.py  generator.py
refactoring/config/: urn_patterns.yaml
refactoring/data/: datahub_lineage_event.json  final_customer_data.json  raw_customer_data.json  staging_customer_data.json
refactoring/registry/: generators.py  writers.py
repository_layer/: lineage_repository.py  neo4j_ingestion.py  registry.yaml
repository_layer/cypher/: constraints.cypher
repository_layer/cypher_examples/: record_example.json
restapi_layer/: __init__.py
src/: __init__.py
src/api_generator/: generator.py
src/cli_generator/: generator.py
src/registry/: __init__.py  factory.py
tests/: __init__.py  run_api_tests.py  run_cli_tests.py  run_registry_tests.py  test_delete.sh  test_delete_cli.sh  test_get.sh  test_get_cli.sh  test_upsert.sh  test_upsert_cli.sh
yaml2graph/api_generator/: generator.py  run_generator.py
yaml2graph/cli_generator/: generator.py  run_generator.py
yaml2graph/registry/: loaders.py
yaml2graph/scripts/: generate_api.py  generate_cli.py
